--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.33",
     "vue": "^3.0.4",
     "vue-router": "^4.0.0",
@@ -14,15 +15,20 @@
     "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.0",
     "@types/node": "^12.0.0",
     "@types/nprogress": "^0.2.0",
+    "@types/qs": "^6.9.6",
     "@vitejs/plugin-vue": "^1.1.5",
     "@vue/compiler-sfc": "^3.0.4",
     "babel-plugin-import": "^1.13.3",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
+    "md5": "^2.3.0",
     "nprogress": "^0.2.0",
+    "qs": "^6.10.0",
     "typescript": "^4.2.3",
-    "vite": "^2.0.0"
+    "vite": "^2.0.0",
+    "vite-plugin-html": "^2.0.3"
   }
 }
