style: add style file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_PUBLIC_PATH = /
 
-VITE_APP_TITLE = Vue3ElementPlusAdmin
+VITE_APP_TITLE = Vue3-Element-Admin
 
 VITE_APP_SHORT_NAME = Vue3Admin
