--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/md5": "^2.3.0",
+    "@types/mockjs": "^1.0.3",
     "@types/node": "^12.0.0",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.6",
@@ -25,6 +26,7 @@
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
     "md5": "^2.3.0",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "qs": "^6.10.0",
     "typescript": "^4.2.3",
