--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "axios": "^0.21.1",
     "element-plus": "^1.1.0-beta.24",
-    "vue": "^3.2.4",
-    "vue-router": "^4.0.0",
+    "vue": "^3.2.20",
+    "vue-router": "^4.0.12",
     "vuex": "^4.0.0",
     "vuex-module-decorators": "^1.0.1"
   },
@@ -20,8 +21,8 @@
     "@types/node": "^12.0.0",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.6",
-    "@vitejs/plugin-vue": "^1.1.5",
-    "@vue/compiler-sfc": "^3.0.4",
+    "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/compiler-sfc": "^3.2.20",
     "babel-plugin-import": "^1.13.3",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
@@ -30,7 +31,7 @@
     "nprogress": "^0.2.0",
     "qs": "^6.10.0",
     "typescript": "^4.2.3",
-    "vite": "^2.0.0",
-    "vite-plugin-html": "^2.0.3"
+    "vite": "^2.6.13",
+    "vite-plugin-html": "^2.1.1"
   }
 }
