--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "typescript": "^4.2.3",
     "vite": "^2.6.13",
     "vite-plugin-html": "^2.1.1"
-  }
+  },
+  "homepage": "https://shellingfordly.github.io/vue3-admin/"
 }
