chore: update config of github-actions

--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
     "vite": "^2.6.13",
     "vite-plugin-html": "^2.1.1"
   },
-  "homepage": "https://shellingfordly.github.io/vue3-admin/"
+  "homepage": "https://shellingfordly.github.io/vue3-admin"
 }
