--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
     "axios": "^0.21.1",
+    "echarts": "^5.2.2",
     "element-plus": "^1.1.0-beta.24",
     "vue": "^3.2.20",
     "vue-router": "^4.0.12",
@@ -32,7 +33,8 @@
     "qs": "^6.10.0",
     "typescript": "^4.2.3",
     "vite": "^2.6.13",
-    "vite-plugin-html": "^2.1.1"
+    "vite-plugin-html": "^2.1.1",
+    "vite-plugin-mock": "^2.9.6"
   },
   "homepage": "https://shellingfordly.github.io/vue3-admin"
 }
