--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "typescript": "^4.2.3",
     "vite": "^2.6.13",
     "vite-plugin-html": "^2.1.1",
-    "vite-plugin-mock": "^2.9.6"
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-svg-icons": "^1.0.5"
   },
   "homepage": "https://shellingfordly.github.io/vue3-admin"
 }
