style: update image file

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 VITE_PUBLIC_PATH = /
 
-VITE_APP_TITLE = Vue3-Admin
+VITE_APP_TITLE = V3-Ele-Admin
 
-VITE_APP_SHORT_NAME = Vue3Admin
+VITE_APP_SHORT_NAME = Vue3
+
+
