--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "vite": "^2.6.13",
     "vite-plugin-html": "^2.1.1",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-svg-icons": "^1.0.5"
+    "vite-plugin-svg-icons": "^1.0.5",
+    "vite-plugin-windicss": "^1.5.4"
   },
   "homepage": "https://shellingfordly.github.io/vue3-admin"
 }
