--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@element-plus/icons": "^0.0.11",
+    "@element-plus/icons-vue": "^0.2.7",
     "axios": "^0.21.1",
     "echarts": "^5.2.2",
-    "element-plus": "^1.1.0-beta.24",
+    "element-plus": "^2.0.1",
     "vue": "^3.2.20",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.0",
