fix: fix icon bug
fix icon not being displayed
update some components to setup
add ElIcon component

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_PUBLIC_PATH = /vue3-element-plus-admin/
+VITE_PUBLIC_PATH = /Vele-admin/
 
-VITE_APP_TITLE = V3-Ele-Admin
+VITE_APP_TITLE = Vele-Admin
 
 VITE_APP_SHORT_NAME = Vue3
 
