--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^0.2.7",
+    "@element-plus/icons": "^0.0.11",
     "axios": "^0.21.1",
     "echarts": "^5.2.2",
     "element-plus": "^2.0.1",
