--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "cross-env NODE_ENV=production vite",
     "serve": "rm -rf ./node_modules/.vite && vite",
     "build:pro": "cross-env NODE_ENV=production vite build",
-    "build": "vite build"
+    "build": "cross-env NODE_ENV=development vite build"
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
