--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.6",
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vitejs/plugin-vue-jsx": "^1.3.8",
     "@vue/compiler-sfc": "^3.2.20",
     "babel-plugin-import": "^1.13.3",
     "cross-env": "^7.0.3",
