--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "cross-env NODE_ENV=production vite",
-    "serve": "rm -rf ./node_modules/.vite && vite",
+    "clearDev": "rm -rf ./node_modules/.vite && vite",
     "build:pro": "cross-env NODE_ENV=production vite build",
     "build": "cross-env NODE_ENV=development vite build"
   },
@@ -12,12 +12,14 @@
     "axios": "^0.21.1",
     "echarts": "^5.2.2",
     "element-plus": "^2.0.1",
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.20",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.0",
     "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@types/md5": "^2.3.0",
     "@types/mockjs": "^1.0.3",
     "@types/node": "^12.0.0",
