refactor: add auto import plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#57384999",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#573849"
+  "peacock.color": "#573849",
+  "cSpell.words": ["nprogress", "unplugin", "windi", "windicss"]
 }
