chore: add auto import

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
     "titleBar.inactiveForeground": "#e7e7e799"
   },
   "peacock.color": "#573849",
-  "cSpell.words": ["nprogress", "unplugin", "windi", "windicss"]
+  "cSpell.words": ["nprogress", "unplugin", "Vele", "windi", "windicss"]
 }
