--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "qs": "^6.10.0",
     "typescript": "^4.2.3",
     "unplugin-auto-import": "^0.8.8",
+    "unplugin-vue-components": "^0.19.6",
     "vite": "^2.6.13",
     "vite-plugin-html": "^2.1.1",
     "vite-plugin-mock": "^2.9.6",
