--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "aws-cdk-lib": "^2.83.1",
     "axios": "^0.21.1",
     "echarts": "^5.2.2",
-    "element-plus": "^2.0.1",
+    "element-plus": "^2.5.2",
     "lodash-es": "^4.17.21",
     "sortablejs": "^1.15.0",
     "vue": "^3.2.20",
